# via-discendi

./: CONTRIBUTING.md  README.md
apps/api/: .env.example  Cargo.toml  README.md  docker-compose.yml  run_test.sh
apps/api/.sqlx/: query-08b85ec5a8d61abbb20190dfde7bd76f44eec03d725d7af18458f3b91586d0dd.json  query-09278f2fa4f043c8934dada6279fbf47b65be0fda6a164e03e9ba633126a096f.json  query-0d93bd2a9a9a6c471741d7f0d3c9ab8627f9357184002311aa3ea7a843cada94.json  query-31e97d44ad778932f1f4fbf4a983aa84f0a37272b0528b59f6288353097a6adc.json  query-3f7c8f7d0947757848afe3ce110690170a4d617a4919d2d350204dd91a5c07a0.json  query-4254e7dbc07465fabbc54d7f5117fdc9014040abcac3b5714e5bf6ce8e3ea0ef.json  query-456053099765103771035cf5422f9910bfff8a79930a41c321f54bae8c64ea6d.json  query-57f341307864434e297238a5c190fb9ae86bf61e449b83f74b334dd2d108f0bd.json  query-da0e7d51cd0602a031095bd3c2aa5493b55411202ef5c0ffafe009c48861822b.json  query-dcddc23357dc9bb97d9c673688c9b7f8f0fce4c846538857fcaf749f305d14ba.json  query-dde72ebf7e9ddfb45eb0c014d530d9fde0d5ecb52bb96e9d857f6ae6a86b4f3c.json  query-ffed2e20cc090160f20248fa4da577d3c40b5dcafb6f53b96da11d21c2b27a67.json
apps/api/init-scripts/: create-test-db.sql
apps/api/migrations/: 20241021115840_user.down.sql  20241021115840_user.up.sql  20241022043810_user_session.down.sql  20241022043810_user_session.up.sql  20241022073229_auth.down.sql  20241022073229_auth.up.sql  20241118002848_roadmap.down.sql  20241118002848_roadmap.up.sql
apps/api/prometheus/: prometheus.yml
apps/api/src/: config.rs  logger.rs  main.rs  observability.rs  router_common.rs  router_config.rs  router_middleware.rs  utils.rs
(+12 files in other folders)
