[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # async lib
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] } # query lib
axum = {version = "0.7", features = ["ws"]} # routing lib
axum-macros = "0.4.2"
argon2 = "0.5" # hashing lib
rand = "0.8"  # randomizer lib
chrono = "0.4" # for datetime dependencies
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
serde_json = "1.0.107"

[dev-dependencies]
tokio-tungstenite = "*"
futures-util = "0.3"
